# damocles

./: .gitignore  .gitmodules  CHANGELOG.zh.md  Dockerfile.manager  Dockerfile.vsm  Makefile  README.md  README_cn.md  TODO.md  rust-toolchain  rust-toolchain.toml
damocles-worker/: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile
damocles-worker/assets/: damocles-worker.mock.toml
damocles-worker/src/: client.rs  config.rs  lib.rs  limit.rs  run.rs  types.rs  version.rs  watchdog.rs
damocles-worker/src/infra/: mod.rs  util.rs
damocles-worker/src/infra/filestore/: attached.rs  mod.rs
damocles-worker/src/infra/objstore/: attached.rs  filestore.rs
damocles-worker/src/infra/piecestore/: local.rs  remote.rs
damocles-worker/src/logging/: mod.rs
damocles-worker/src/metadb/: mod.rs
damocles-worker/src/metadb/rocks/: mod.rs
damocles-worker/src/metrics/: mod.rs  rpc.rs
damocles-worker/src/rpc/sealer/: mod.rs
damocles-worker/src/rpc/worker/: mod.rs
damocles-worker/src/sealing/: config.rs  failure.rs  hot_config.rs  mod.rs  paths.rs  ping.rs  resource.rs  service.rs  util.rs
damocles-worker/src/sealing/processor/: mod.rs
damocles-worker/src/sealing/sealing_thread/: ctrl.rs  entry.rs  mod.rs  util.rs
damocles-worker/src/sealing/store/: mod.rs
damocles-worker/src/util/: net.rs  panic_hook.rs
damocles-worker/vc-processors/: Cargo.toml
damocles-worker/vc-processors/examples/: builtin-proc.rs  customize-proc.rs  sqr-consumer.rs  sqr-producer.rs
damocles-worker/vc-processors/src/: b64serde.rs  lib.rs
damocles-worker/vc-processors/src/builtin/: mod.rs  processors.rs  tasks.rs
damocles-worker/vc-processors/src/core/: mod.rs
damocles-worker/vc-processors/src/fil_proofs/: mod.rs
damocles-worker/vc-processors/src/sys/: cgroup.rs  numa.rs
docs/en/: QA.md  (+25 more)
hwinfo/: Cargo.toml  Makefile
hwinfo/src/: cpu.rs  disk.rs  gpu.rs  lib.rs  mem.rs
venus-worker/: .clippy.toml  Cargo.toml  Dockerfile  Makefile  cleanup_orphan.sh  create-cgroup.sh
venus-worker-util/: Cargo.toml  Makefile
venus-worker-util/src/: hwinfo.rs  lib.rs  sealcalc.rs
venus-worker-util/src/hwinfo/: cpu.rs  disk.rs  mem.rs
venus-worker/.cargo/: config.toml
venus-worker/assets/: venus-worker.mock.toml  venus-worker.toml
venus-worker/hwinfo/: Cargo.toml
venus-worker/hwinfo/src/: cpu.rs  disk.rs  gpu.rs  lib.rs  mem.rs
venus-worker/jsonrpc-core-client/: Cargo.toml
venus-worker/jsonrpc-core-client/src/: client.rs  lib.rs  req.rs  resp.rs
venus-worker/jsonrpc-core-client/src/channel/: mod.rs  oneshot.rs
venus-worker/jsonrpc-core-client/src/transports/: duplex.rs  local.rs  mod.rs  ws.rs
venus-worker/src/: client.rs  config.rs  lib.rs  run.rs  signal.rs  types.rs  version.rs  watchdog.rs
venus-worker/src/infra/: mod.rs  util.rs
venus-worker/src/infra/objstore/: attached.rs  filestore.rs  mod.rs
venus-worker/src/infra/piecestore/: local.rs  mod.rs  proxy.rs  remote.rs
venus-worker/src/logging/: mod.rs
venus-worker/src/metadb/: mod.rs
venus-worker/src/metrics/: mod.rs  rpc.rs  task.rs  util.rs
venus-worker/src/rpc/: mock.rs  mod.rs  ws.rs
venus-worker/src/rpc/sealer/: mock.rs  mod.rs
venus-worker/src/rpc/worker/: mod.rs
venus-worker/src/sealing/: config.rs  event.rs  failure.rs  generator.rs  hot_config.rs  mod.rs  ping.rs  resource.rs  sector.rs  service.rs  util.rs  worker.rs
venus-worker/src/sealing/processor/: mod.rs  proof.rs  safe.rs
venus-worker/src/sealing/seal/: safe.rs
venus-worker/src/sealing/sealing_thread/: mod.rs
venus-worker/src/sealing/store/: hot_config.rs  mod.rs  util.rs
venus-worker/src/sealing/worker/: ctrl.rs  event.rs  mod.rs  sealer.rs  sector.rs
venus-worker/src/sys/: mod.rs  numa.rs
venus-worker/src/tracing/: logging.rs  mod.rs
venus-worker/src/util/: mod.rs  net.rs  panic_hook.rs  reader.rs  task.rs
venus-worker/vc-fil-consumers/: Cargo.toml
venus-worker/vc-fil-consumers/examples/: builtin-executor.rs  customize-consumer.rs
venus-worker/vc-fil-consumers/src/: lib.rs  tasks.rs
venus-worker/vc-fil-consumers/src/builtin/: executors.rs  mod.rs
venus-worker/vc-fil-consumers/src/fil_proofs/: mod.rs
venus-worker/vc-ipc/: Cargo.toml  README.md
venus-worker/vc-ipc/benches/: server.rs
venus-worker/vc-ipc/examples/fib/: client.rs  server.rs
venus-worker/vc-ipc/src/: client.rs  framed.rs  lib.rs  readwriter.rs  serded.rs  server.rs
venus-worker/vc-ipc/src/framed/: lines_codec.rs
venus-worker/vc-ipc/src/readwriter/: pipe.rs  reconnect.rs  tcp.rs
venus-worker/vc-ipc/src/serded/: bincode.rs  json.rs
venus-worker/vc-processors/: Cargo.toml
venus-worker/vc-processors-demos/builtin-proc/: Cargo.toml  README.md
venus-worker/vc-processors-demos/builtin-proc/src/: main.rs
venus-worker/vc-processors-demos/customize-proc/: Cargo.toml  README.md
venus-worker/vc-processors-demos/customize-proc/src/: main.rs
venus-worker/vc-processors-demos/pow-consumer/: Cargo.toml
venus-worker/vc-processors-demos/pow-producer/: Cargo.toml
venus-worker/vc-processors-demos/sqr-consumer/: Cargo.toml  README.md
venus-worker/vc-processors-demos/sqr-consumer/src/: main.rs
venus-worker/vc-processors-demos/sqr-producer/: Cargo.toml  README.md
venus-worker/vc-processors-demos/sqr-producer/src/: main.rs
venus-worker/vc-processors-v2/: Cargo.toml
venus-worker/vc-processors-v2/examples/: sqr.rs
venus-worker/vc-processors-v2/src/: lib.rs  request.rs
venus-worker/vc-processors-v2/src/consumer/: dispatch.rs  routing.rs
venus-worker/vc-processors-v2/src/sys/: cgroup.rs  mod.rs  numa.rs
venus-worker/vc-processors/examples/: builtin-proc.rs  customize-proc.rs  sqr-consumer.rs  sqr-producer.rs  sqr.rs
venus-worker/vc-processors/src/: b64serde.rs  client.rs  context.rs  core.rs  lib.rs  request.rs  response.rs  thread.rs
venus-worker/vc-processors/src/builtin/: executor.rs  mod.rs  processors.rs  simple_processor.rs  task_id_extractor.rs  tasks.rs
venus-worker/vc-processors/src/consumer/: mod.rs  task_id.rs
venus-worker/vc-processors/src/core/: mod.rs
venus-worker/vc-processors/src/fil_proofs/: mod.rs
(+728 files in other folders)
