[package]
name = "damocles-worker"
version = "0.7.5"
authors = ["dtynn <dtynn@163.com>"]
edition = "2021"
exclude = [
    ".github",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "vc-processors",
]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
base64-serde = "0.6"
base64 = "0.13"
forest_json_utils = "0.1"
forest_cid = { version = "0.3", features = ["json"] }
fil_clock = "0.1"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
crossterm = "0.26"
jsonrpc-core = "18"
jsonrpc-derive = "18"
jsonrpc-http-server = "18"
toml = "0.7"
humantime-serde = "1"
clap = { version = "4.2", features = ["derive", "env"] }
signal-hook = "0.3"
multiaddr = "0.17.1"
rand = "0.8.5"
nix = "0.23"
bytesize = "1.1"
libc = "0.2"
glob = "0.3"
regex = "1"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
paste = "1.0.11"
once_cell = "1"
time = { version = "0.3.20", features = ["local-offset", "formatting"] }
url = "2.3.1"
bellperson = { version = "0.24.1", optional = true }

[dependencies.reqwest]
version = "0.11"
features = ["blocking"]

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread"]

[dependencies.fil_types]
version = "0.2"
features = ["json"]

[dependencies.rocksdb]
version = "0.20"

[dependencies.jsonrpc-core-client]
version = "18"
features = ["tls", "http"]

[dependencies.byte-unit]
version = "4"
features = ["serde"]

[target.'cfg(target_os = "macos")'.dependencies]
vc-processors = { path = "./vc-processors" }

[target.'cfg(not(target_os = "macos"))'.dependencies]
vc-processors = { path = "./vc-processors", features = ["numa"] }

[dependencies.storage-proofs-porep]
git = "https://github.com/ipfs-force-community/rust-fil-proofs"
package = "storage-proofs-porep"
branch = "force/master_v14.0.0"
default-features = false

[dev-dependencies]
pretty_assertions = "1.3"
humantime = "2.1"
tempfile = "3.3"


[features]
default = ["vc-processors/builtin", "vc-processors/ext-producer"]
cuda = ["vc-processors/fil-proofs-cuda"]
supra-c2 = ["bellperson/supra-c2"]

[patch.crates-io]
filecoin-hashers = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "filecoin-hashers", branch = "force/master_v14.0.0" }
filecoin-proofs = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "filecoin-proofs", branch = "force/master_v14.0.0" }
fr32 = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "fr32", branch = "force/master_v14.0.0" }
sha2raw = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "sha2raw", branch = "force/master_v14.0.0" }
storage-proofs-core = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-core", branch = "force/master_v14.0.0" }
storage-proofs-porep = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-porep", branch = "force/master_v14.0.0" }
storage-proofs-post = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-post", branch = "force/master_v14.0.0" }
storage-proofs-update = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-update", branch = "force/master_v14.0.0" }

bellperson = { git = "https://github.com/ipfs-force-community/bellperson.git", branch = "v0.24.1-supra-c2" }
sppark = { git = "https://github.com/supranational/sppark.git", rev = "3ea4eb3" }
blst = { git = "https://github.com/supranational/blst.git", rev = "dce883b" }
