[package]
name = "damocles-worker"
version = "0.13.1"
authors = ["dtynn <dtynn@163.com>"]
edition = "2021"
exclude = [".github"]

[workspace]
members = ["vc-processors"]

[workspace.dependencies]
nix = "0.26.2"
libc = "0.2"
anyhow = "1"

[dependencies]
anyhow = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
base64-serde = "0.6"
base64 = "0.13"
forest_json_utils = "0.1"
forest_cid = { version = "0.3", features = ["json"] }
fil_clock = "0.1"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
crossterm = "0.26"
jsonrpc-core-client = { git = "https://github.com/ipfs-force-community/jsonrpc.git", branch = "feat/0x5459/v18-do-not-check-http-status", features = [
    "tls",
    "http",
] }
jsonrpc-core = { git = "https://github.com/ipfs-force-community/jsonrpc.git", branch = "feat/0x5459/v18-do-not-check-http-status" }
jsonrpc-derive = { git = "https://github.com/ipfs-force-community/jsonrpc.git", branch = "feat/0x5459/v18-do-not-check-http-status" }
jsonrpc-http-server = { git = "https://github.com/ipfs-force-community/jsonrpc.git", branch = "feat/0x5459/v18-do-not-check-http-status" }
toml = "0.7"
humantime = "2.1"
humantime-serde = "1"
clap = { version = "4.2", features = ["derive", "env"] }
signal-hook = "0.3"
multiaddr = "0.17.1"
rand = "0.8.5"
nix = { workspace = true }
bytesize = "1.1"
libc = { workspace = true }
glob = "0.3"
regex = "1"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
paste = "1.0.11"
once_cell = "1"
time = { version = "0.3.20", features = ["local-offset", "formatting"] }
url = "2.3.1"
tabwriter = "1"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
fil_types = { version = "0.2", features = ["json"] }
rocksdb = { version = "0.21.0" }
byte-unit = { version = "4", features = ["serde"] }

storage-proofs-porep = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-porep", branch = "force/v18.1.0", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
vc-processors = { path = "./vc-processors" }

[target.'cfg(not(target_os = "macos"))'.dependencies]
vc-processors = { path = "./vc-processors", features = ["numa"] }


[dev-dependencies]
pretty_assertions = "1.3"
tempfile = "3.3"


[features]
default = ["vc-processors/builtin", "vc-processors/ext-producer"]
cuda = ["vc-processors/fil-proofs-cuda"]

cuda-supraseal = ["vc-processors/fil-cuda-supraseal"]
supra-c2 = ["vc-processors/fil-cuda-supraseal"]       # alias cuda-supraseal

auto-resume = []

[patch.crates-io]
filecoin-hashers = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "filecoin-hashers", branch = "force/v18.1.0" }
filecoin-proofs = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "filecoin-proofs", branch = "force/v18.1.0" }
fr32 = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "fr32", branch = "force/v18.1.0" }
sha2raw = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "sha2raw", branch = "force/v18.1.0" }
storage-proofs-core = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-core", branch = "force/v18.1.0" }
storage-proofs-porep = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-porep", branch = "force/v18.1.0" }
storage-proofs-post = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-post", branch = "force/v18.1.0" }
storage-proofs-update = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-update", branch = "force/v18.1.0" }
