[package]
name = "hwinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["opencl"]
opencl = ["rust-gpu-tools/opencl"]
cuda = ["rust-gpu-tools/cuda"]

[dependencies]
anyhow = "1"
hwloc2 = { git = "https://github.com/ipfs-force-community/hwloc2-rs.git", rev = "80b251c" }
sysinfo = "0.23"
byte-unit = { version = "4.0", default-features = false }
strum = { version = "0.24", features = ["derive"] }
term-table = "1.3"
rust-gpu-tools = { version = "0.6.0", default-features = false }
clap = "3.2"
