[package]
name = "venus-worker"
version = "0.3.0-rc1"
authors = ["dtynn <dtynn@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
storage-proofs-core = "11.0.2"
memmap = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
serde_repr = "0.1"
base64-serde = "0.6"
base64 = "0.13"
forest_json_utils = "0.1"
forest_address = "0.3"
forest_cid = { version = "0.3", features = ["json"]}
fil_clock = "0.1"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
crossterm = "0.20"
jsonrpc-core = "18"
jsonrpc-derive = "18"
jsonrpc-http-server = "18"
toml = "0.5"
humantime-serde = "1"
clap = "2.33"
cgroups-rs = "0.2"
signal-hook = "0.3"
multiaddr = "0.14.0"
rand = "0.8.5"
nix = "0.23"
time = "0.3"

[dependencies.filecoin-proofs-api]
version = "11"
default-features = false
features = ["opencl", "multicore-sdr"]

[dependencies.filecoin-proofs]
version = "11.0.2"
default-features = false
features = ["opencl", "multicore-sdr"]

[dependencies.reqwest]
version = "0.11"
features = ["blocking"]

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread"]

[dependencies.fil_types]
version = "0.2"
features = ["json"]

[dependencies.rocksdb]
version = "0.16"

[dependencies.jsonrpc-core-client]
version = "18"
features = ["tls", "http"]

[dependencies.byte-unit]
version = "4"
features = ["serde"]

[dev-dependencies]
pretty_assertions = "1.2"
humantime = "2.1"

[features]
default = ["numa"]
numa = []
cuda = ["filecoin-proofs/cuda", "filecoin-proofs-api/cuda"]
