[package]
name = "venus-worker"
version = "0.6.0-rc1"
authors = ["dtynn <dtynn@163.com>"]
edition = "2021"
exclude = [".github"]

[features]
default = []
numa = ["vc-processors/numa"]
cuda = ["vc-fil-consumers/fil-proofs-cuda"]
console = ["console-subscriber"]

[workspace]
members = ["vc-processors", "vc-fil-consumers"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
base64-serde = "0.6"
base64 = "0.13"
forest_json_utils = "0.1"
forest_cid = { version = "0.3", features = ["json"] }
fil_clock = "0.1"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "local-time",
    "tracing-log"
] }
console-subscriber = { version = "0.1.8", optional = true }
tracing-opentelemetry = "0.18"
opentelemetry = { version = "0.18", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio"] }
jsonrpc-core = "18"
jsonrpc-derive = "18"
jsonrpc-http-server = "18"
toml = "0.7"
humantime-serde = "1"
clap = "2.34"
signal-hook = "0.3"
multiaddr = "0.17.1"
rand = "0.8.5"
nix = "0.23"
bytesize = "1.1"
libc = "0.2"
glob = "0.3"
regex = "1"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
paste = "1.0.11"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
fil_types = { version = "0.2", features = ["json"] }
rocksdb = "0.20"
jsonrpc-core-client = { version = "18", features = ["tls", "http"] }
byte-unit = { version = "4", features = ["serde"] }
tower = { version = "0.4", features = ["discover", "util"] }
vc-processors = { path = "./vc-processors" }

[target.'cfg(target_os = "macos")'.dependencies]
vc-fil-consumers = { path = "./vc-fil-consumers" }

[target.'cfg(not(target_os = "macos"))'.dependencies]
vc-fil-consumers = { path = "./vc-fil-consumers" }

[dependencies.storage-proofs-porep]
git = "https://github.com/ipfs-force-community/rust-fil-proofs"
package = "storage-proofs-porep"
branch = "force/master_v12.0.0"
default-features = false

[dev-dependencies]
pretty_assertions = "1.3"
humantime = "2.1"
tempfile = "3.3"

[patch.crates-io]
filecoin-hashers = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "filecoin-hashers", branch = "force/master_v12.0.0" }
filecoin-proofs = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "filecoin-proofs", branch = "force/master_v12.0.0" }
fr32 = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "fr32", branch = "force/master_v12.0.0" }
sha2raw = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "sha2raw", branch = "force/master_v12.0.0" }
storage-proofs-core = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-core", branch = "force/master_v12.0.0" }
storage-proofs-porep = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-porep", branch = "force/master_v12.0.0" }
storage-proofs-post = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-post", branch = "force/master_v12.0.0" }
storage-proofs-update = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-update", branch = "force/master_v12.0.0" }
