[package]
name = "vc-processors"
version = "0.2.1"
edition = "2021"
license = "MIT"
keywords = [
    "filecoin",
    "venus",
    "damocles",
    "damocles-worker",
    "venus-cluster",
    "venus-worker",
]
description = "provide core types & builtin processors for damocles-worker"
homepage = "https://github.com/ipfs-force-community/damocles"
repository = "https://github.com/ipfs-force-community/damocles"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = { workspace = true }
crossbeam-channel = { version = "0.5", optional = true }
memmap = { version = "0.7", optional = true }
uuid = { version = "1", features = ["v4", "fast-rng"] }
forest_address = { version = "0.3", optional = true }
base64-serde = { version = "0.7", optional = true }
base64 = { version = "0.21", optional = true }
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["blocking"], optional = true }
fnv = "1.0.7"
nix = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = "0.3"

[dependencies.filecoin-proofs]
version = "16.0"
default-features = false
features = ["opencl", "multicore-sdr"]
optional = true

[dependencies.filecoin-proofs-api]
version = "16.0"
default-features = false
features = ["opencl", "multicore-sdr"]
optional = true

[dependencies.storage-proofs-core]
version = "16.0"
optional = true

[dependencies.storage-proofs-porep]
version = "16.0"
optional = true


[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
rand = "0.8"
pretty_assertions = "1.3"
hex = "0.4"
tempfile = "3"

[features]
default = ["ext-producer", "builtin"]
ext-producer = ["crossbeam-channel"]
numa = []
b64serde = ["base64", "base64-serde"]
fil-proofs = [
    "memmap",
    "b64serde",
    "forest_address",
    "filecoin-proofs",
    "filecoin-proofs-api",
    "storage-proofs-core",
    "storage-proofs-porep",
]
fil-proofs-cuda = [
    "fil-proofs",
    "filecoin-proofs/cuda",
    "filecoin-proofs-api/cuda",
]
builtin-tasks = ["fil-proofs"]
builtin-processors = ["builtin-tasks", "reqwest"]
builtin = ["builtin-tasks", "builtin-processors"]

[[example]]
name = "sqr-consumer"
required-features = []

[[example]]
name = "sqr-producer"
required-features = ["ext-producer"]

[[example]]
name = "customize-proc"
required-features = ["ext-producer", "builtin-tasks"]

[[example]]
name = "builtin-proc"
required-features = ["ext-producer", "builtin"]
