[package]
name = "hwinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
hwloc2 = "2.2.0"
sysinfo = "0.23"
byte-unit = { version = "4.0", default-features = false }
strum = { version = "0.24", features = ["derive"] }
term-table = "1.3"
clap = "2.33"