[package]
name = "jsonrpc-core-client"
version = "17.0.0"
authors = ["dtynn <dtynn@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "17"
jsonrpc-pubsub = "17"
derive_more = "0.99"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dependencies.async-std]
version = "1.9"
features = ["unstable"]

[dependencies.async-tungstenite]
version = "*"
features = ["async-native-tls"]
