[package]
name = "vc-fil-consumers"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "builtin-add-pieces",
    "builtin-tree-d",
    "builtin-pc1",
    "builtin-pc2",
    "builtin-c2",
    "builtin-snap-encode",
    "builtin-snap-prove",
    "builtin-transfer",
    "builtin-window-post",
    "builtin-winning-post",
]
b64serde = ["base64", "base64-serde"]
fil-proofs = [
    "memmap",
    "b64serde",
    "forest_address",
    "filecoin-proofs",
    "filecoin-proofs-api",
    "storage-proofs-core",
    "storage-proofs-porep",
]
fil-proofs-cuda = ["filecoin-proofs/cuda", "filecoin-proofs-api/cuda"]
builtin-add-pieces = ["fil-proofs", "reqwest", "lazy_static"]
builtin-tree-d = ["fil-proofs"]
builtin-pc1 = ["fil-proofs"]
builtin-pc2 = ["fil-proofs"]
builtin-c2 = ["fil-proofs"]
builtin-snap-encode = ["fil-proofs"]
builtin-snap-prove = ["fil-proofs"]
builtin-transfer = []
builtin-window-post = ["fil-proofs"]
builtin-winning-post = ["fil-proofs"]


[dependencies]
anyhow = "1"
serde = "1"
tracing = "0.1"
vc-processors = { path = "../vc-processors" }
memmap = { version = "0.7", optional = true }
forest_address = { version = "0.3", optional = true }
base64-serde = { version = "0.7", optional = true }
base64 = { version = "0.21", optional = true }
lazy_static = { version = "1.4", optional = true }
reqwest = { version = "0.11", features = ["blocking"], optional = true }
filecoin-proofs = { version = "12.0", default-features = false, features = [
    "opencl",
    "multicore-sdr",
], optional = true }
filecoin-proofs-api = { version = "12.0", default-features = false, features = [
    "opencl",
    "multicore-sdr",
], optional = true }
storage-proofs-core = { version = "12.0", optional = true }
storage-proofs-porep = { version = "12.0", optional = true }

[dev-dependencies]
hex = "0.4"
rand = "0.8"
pretty_assertions = "1.3"
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "local-time",
] }
tokio-transports = { version = "0.1", default-features = false, features = [
    "serded-json",
    "tracing",
    "rw-pipe",
] }
tower = { version = "0.4", features = ["limit"] }

[[example]]
name = "customize-consumer"
required-features = []

[[example]]
name = "builtin-executor"
required-features = []
