[package]
name = "vc-ipc"
version = "0.1.0"
edition = "2021"

[features]
default = ["serded-json"]
client = []
server = []
serded-json = ["serde_json"]
# serded-bincode = ["bincode"]

[[example]]
name = "fib-client"
path = "examples/fib/client.rs"

[[example]]
name = "fib-server"
path = "examples/fib/server.rs"


[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
pin-project = "1"
fnv = "1.0"
bytes = "1.2"
tokio-util = { version = "0.7", features = ["codec", "time"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
thiserror = "1"
serde_json = { version = "1", optional = true }
bincode = { version = "1.3", optional = false }
tower-service = "0.3"
tower = { version = "0.4", features = ["util"] }
mdsn = "0.2"
indexmap = "1.9"
shlex = "1.1"

[dev-dependencies]
rand = "0.8"
pretty_assertions = "1"
tokio-retry = "0.3"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "local-time",
] }
time = "0.3"
anyhow = "1"
crossterm = "0.25"
criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
tower = { version = "0.4", features = ["full"] }

[[bench]]
name = "server"
harness = false
