[package]
name = "vc-processors"
version = "0.0.1"
edition = "2021"
license = "MIT"
keywords = [
    "filecoin",
    "venus",
    "venus-cluster",
    "venus-worker",
]
description = "provide core types & builtin processors for venus-worker"
homepage = "https://github.com/ipfs-force-community/venus-cluster"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1"
crossbeam-channel = "0.5"
memmap = { version = "0.7", optional = true }

[dependencies.filecoin-proofs]
version = "11.0.2"
default-features = false
features = ["opencl", "multicore-sdr"]
optional = true

[dependencies.filecoin-proofs-api]
version = "11"
default-features = false
features = ["opencl", "multicore-sdr"]
optional = true

[dependencies.storage-proofs-core]
version = "11.0.2"
optional = true

[features]
default = ["builtin", "numa"]
numa = []
fil-proofs = ["memmap", "filecoin-proofs", "filecoin-proofs-api", "storage-proofs-core"]
fil-proofs-cuda = ["fil-proofs", "filecoin-proofs/cuda", "filecoin-proofs-api/cuda"]
builtin-tasks = ["fil-proofs"]
builtin-processors = ["builtin-tasks"]
builtin = ["builtin-tasks", "builtin-processors"]
